--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 html {
-    background-image: url(../CSS+JS-clock/blossoms-gd80fdde75_1920.jpg);
+    background-image: url(blossoms-gd80fdde75_1920.jpg);
     background-size: cover;
     text-align: center;
     width: 100%;
